# UWExploration

./: .gitignore  README.md
auv_2_ros/: CMakeLists.txt  package.xml
auv_2_ros/action/: MbesSim.action
auv_2_ros/include/auv_2_ros/: auv_2_ros.hpp  mbes_meas.hpp
auv_2_ros/launch/: auv_2_listener.launch  auv_localization.launch
auv_2_ros/src/: auv2ros_parser.cpp  auv_2_listener.py  auv_2_ros.cpp  auv_2_ros_node.cpp  auv_workspace.code-workspace  mbes_meas.cpp  mbes_meas_node.cpp  read_auv_data.cpp
auv_particle_filter/: CMakeLists.txt  package.xml
auv_particle_filter/launch/: auv_2_listener.launch  auv_pf.launch
auv_particle_filter/scripts/: auv_pf.py
auv_particle_filter/src/: auv_pf.py  pf_aruco_slam.py
auv_pf/: CMakeLists.txt  package.xml
bathy_construction/: CMakeLists.txt  package.xml
bathy_construction/include/bathy_construction/: bathymap_constructor.hpp
bathy_construction/src/: bathymap_constructor.cpp  bathymap_constructor_node.cpp  tests.cpp
detection/: change_detection.rviz
detection/change_detection/: CMakeLists.txt  package.xml
detection/change_detection/launch/: change_detection.launch
detection/change_detection/scripts/: change_detector.py
hugin_description/mesh/: sam_cover.dae
hugin_description/urdf/: hugin_auv_base.urdf.xacro
localization/auv_particle_filter/: CMakeLists.txt  package.xml
localization/auv_particle_filter/launch/: auv_pf.launch  lolo_auv_pf.launch  pf_aruco_slam.launch
localization/auv_particle_filter/meshes/: create_mesh.py
localization/auv_particle_filter/scripts/: auv_particle.py  auv_particle_gp.py  auv_particle_igl.py  auv_particle_ufo.py  auv_pf.py  auv_pf_gp.py  auv_pf_igl.py  mbes_tf_snippets.py  pf_loop.py  visual_tools.py
localization/auv_particle_filter/src/: auv_pf.py
localization/lolo_particle_filter/: CMakeLists.txt  package.xml
localization/lolo_particle_filter/launch/: publish_map.launch
localization/lolo_particle_filter/scripts/: auv_pf_gp.py  auv_pf_gp_nacho.py
localization/map_pcl_publisher/: CMakeLists.txt  package.xml
localization/map_pcl_publisher/scripts/: lolo_map_vis.py  map_pcl_vis.py
localization/sss_particle_filter/: CMakeLists.txt  package.xml
localization/sss_particle_filter/include/sss_particle_filter/: pf_particle.h  sss_pf_localization.h
localization/sss_particle_filter/launch/: sss_pf.launch
localization/sss_particle_filter/scripts/: sss_pf.py
localization/sss_particle_filter/src/: pf_particle.cpp  sss_payload.cpp  sss_pf_localization.cpp  sss_pf_localization_node.cpp
mapping/gp_mapping/: CMakeLists.txt  package.xml  setup.py
mapping/gp_mapping/launch/: gp_mapping.launch
mapping/gp_mapping/scripts/: auv_ui.py  barfoot_utils.py  barfoot_utils_np.py  ui_utils.py
mapping/uncert_management/: CMakeLists.txt  package.xml  setup.py
mapping/uncert_management/launch/: ui_test.launch
mbes_model/: CMakeLists.txt  package.xml
mbes_model/include/mbes_model/: multibeam_simple.hpp
mbes_model/src/: multibeam_simple.cpp
planning/backseat_driver/: CMakeLists.txt  package.xml
planning/backseat_driver/scripts/: backseat_pf_driver.py
planning/basic_navigation/: CMakeLists.txt  package.xml
planning/basic_navigation/launch/: active_pf_sim.launch  basic_mission.launch
planning/basic_navigation/scripts/: auv_sim_teleop.py  w2w_mission_planner.py  w2w_planner.py
planning/ipp/: CMakeLists.txt  package.xml
planning/ipp/include/: rviz_launch.rviz
planning/ipp/launch/: ipp.launch  ipp_lolo.launch
planning/ipp/obsolete/: PlannerClasses.py  test_playground.py
planning/ipp/python/: AcquisitionFunctionClass.py  BayesianOptimizerClass.py  BayesianPlannerClass.py  CustomAcqFun.py  GaussianProcessClass.py  LawnmowerPlannerClass.py  MonteCarloTreeClass.py  PlannerClasses.py  PlannerTemplateClass.py  VisualizationClass.py  basic_plan.py  (+7 more)
real_auv/auv_2_ros/: CMakeLists.txt  package.xml
real_auv/bathy_mapper/: CMakeLists.txt  nodelet_plugins.xml  package.xml
real_auv/bathy_mapper/cfg/: Server.cfg
real_auv/bathy_mapper/include/bathy_mapper/: bathy_mapper.h  bathy_mapper_nodelet.h
real_auv/bathy_mapper/launch/: server.launch  server_nodelet.launch
real_auv/bathy_mapper/maps/: lost_targets_map_map
real_auv/bathy_mapper/rviz/: bathy_map.rviz
real_auv/bathy_mapper/src/: bathy_mapper.cpp  bathy_mapper_node.cpp  bathy_mapper_nodelet.cpp
real_auv/hugin_description/: CMakeLists.txt  package.xml
real_auv/lolo_description/: CMakeLists.txt  README.md  package.xml
real_auv/lolo_interface/: scan_2_ptcloud.py
real_auv/lolo_ipp_interface/: CMakeLists.txt  package.xml
real_auv/lolo_pf_interface/: CMakeLists.txt  package.xml
rviz/: bathy_map.rviz
sim_auv/auv_model/: CMakeLists.txt  package.xml
sim_auv/auv_model/action/: MbesSim.action  SssSim.action
sim_auv/auv_model/include/auv_model/: auv_motion_simple.hpp  sss_payload.hpp
sim_auv/auv_model/launch/: auv_env_aux.launch  auv_environment.launch  auv_exploration.launch  auv_localization.launch  auv_model.launch  auv_sim.launch  car_demo.launch  lolo_auv_sim.launch
sim_auv/auv_model/msg/: Sidescan.msg
sim_auv/auv_model/scripts/: auv_mbes_model.py  auv_multi.py  auv_payload.py  auv_sim_teleop.py  auv_sss_model.py  view_sidescan.py  view_sidescan_particles.py
sim_auv/auv_model/src/: auv_motion_simple.cpp  auv_motion_simple_node.cpp  auv_payload.cpp  sss_payload.cpp
slam/bathy_graph_slam/: CMakeLists.txt  package.xml
slam/bathy_graph_slam/include/bathy_graph_slam/: bathy_slam.hpp  sam_graph.hpp  serial.hpp  submap_constructor.hpp
slam/bathy_graph_slam/launch/: slam.launch
slam/bathy_graph_slam/msg/: LandmarksIdx.msg
slam/bathy_graph_slam/src/: bathy_slam_node.cpp  graph_gp_training.cpp  sam_graph.cpp  submap_constructor.cpp  test_serial.cpp
slam/bathy_slam/: CMakeLists.txt  package.xml
slam/rbpf_multiagent/: CMakeLists.txt  package.xml
slam/rbpf_slam/: CMakeLists.txt  package.xml
slam/slam_msgs/: CMakeLists.txt  package.xml
utils/map_features/: CMakeLists.txt  package.xml
utils/map_visualizer/: CMakeLists.txt  package.xml
utils/uw_tests/: CMakeLists.txt  package.xml
(+7448 files in other folders)
