<?xml version="1.0"?>
<package format="2">
  <name>bathy_mapper</name>
  <version>1.0.0</version>
  <description>The bathy_mapper package</description>

  <maintainer email="torroba18@todo.todo">torroba18</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>dynamic_reconfigure</depend>
  <depend>geometry_msgs</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_sensor_msgs</depend>
  <depend>ufomap</depend>
  <depend>ufomap_msgs</depend>
  <depend>ufomap_ros</depend>
  <depend>pcl_ros</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>eigen_conversions</depend>
  <depend>tf_conversions</depend>

  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
  </export>
</package>
